Names not fitting fix

--- a/src/components/Player/Player.module.css
+++ b/src/components/Player/Player.module.css
@@ -8,12 +8,14 @@
 	margin: auto;
 	color: #ffffff;
 	font-family: 'Roboto', sans-serif;
-	font-size: 2.5em;
+	font-size: 2.5rem;
 }
+
 .nr {
 	margin-top: 0.3em;
 	padding-bottom: 0.2em;
 }
 .name {
 	margin-top: 0.2em;
+	font-size: 2rem;
 }
